# projection_matrices

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
docs/: _config.yml  _toc.yml  intro.md  projection_matrices.ipynb  projections_directx.ipynb  projections_metal.ipynb  projections_opengl.ipynb  projections_vulkan.ipynb
projection_matrices/: __init__.py  projection_matrices.py
tests/: test_directx.py  test_metal.py  test_opengl.py  test_vulkan.py
