[tool.poetry]
name = "projection_matrices"
version = "0.1.0"
description = ""
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
sympy = "^1.13.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
